Update html, js, and css files to better follow the style guide.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,7 +18,7 @@
       </p>
       <p>This page is pink because that is Gabi's favorite color.</p>
       <p> Here is a fun selfie she took a while ago!</p>
-      <img src="/images/selfie.jpg" alt="An image of Gabi posing with her hand on her face."/>
+      <img id="selfie" src="/images/selfie.jpg" alt="An image of Gabi posing with her hand on her face."/>
       <p>Click here to get a random fact about Gabi:</p>
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
