--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,5 +28,11 @@
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
     </div>
+    <div id="sidebar">
+      <a href="/index.html">Home</a>
+      <a href="/about.html">About Me</a>
+      <a href="/gallery.html">Gallery</a>
+      <a href="/hobbies.html">Hobbies</a>
+    </div>
   </body>
 </html>
