--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
   <head>
-    <meta charset="UTF-8">
     <title>Image Gallery</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
