Add content to about page.

--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -9,6 +9,52 @@
   <body>
     <div id="content">
       <h1>About Me</h1>
+      <h2>Here's a more detailed look at what makes me me!</h2>
+      <h4><a href="#childhood">Childhood</a></h4>
+      <h4><a href="#cs">Computer Science</a></h4>
+      <h4><a href="#school">School</a></h4>
+      <h4><a href="#pets">Pets</a></h4>
+      <h3 id="childhood">Childhood</h3>
+      <p>My full name is Gabrielle Newman and I'm 20 years old.
+          I grew up in Brooklyn, New York. My family moved around
+          the city a bit, but I lived in NYC my whole life until I
+          left for college. I went to high school in Manhatten, and
+          taking the subway to school every day was a really cool
+          experience. Well, except for when train delays would make me
+          late for class.
+      </p>
+      <h3 id="cs">Computer Science</h3>
+      <p>I got into computer science when I took a required introductory
+          class as a sophomore, and haven't looked back since. I love puzzles
+          and problem solving, and for me, that's what CS is all about!
+          Within CS, the two areas I've found myself the most interested
+          in are theoretical CS and operating systems. They're very
+          different, but what can I say? I just love to write proofs and
+          code in C.
+      </p>
+      <h3 id="school">School</h3>
+      <p>I currently attend the University of Massachusetts Amherst, where
+          I just finished up my sophomore year. I'm a double major in 
+          Computer Science and Mathematics (with a concentration in computing).
+          I'm also in the Commonwealth Honors College at UMass, part of which
+          means I'm on track to write a thesis in my senior year. The thought
+          of it is honestly pretty scary, since I know it will be a lot of
+          work. However, I also think it'll be a really great learning
+          experience.
+          UMass can be really fun, since it's so big and in such a beautiful
+          area (western Massachusetts). However, it can also be hard to find
+          myself so far from home. Still, I've made a lot of great friends
+          in my time there and wouldn't trade the experience for anything.
+      </p>
+      <h3 id="pets">Pets</h3>
+      <p>My favorite animals in the entire world are cats! I just think
+          they're so cute, fluffy, and cuddly. I used to have a cat named
+          Scout, who I raised from the time he was a kitten. Unfortunately,
+          since I left for college, he hasn't been living with me. Instead
+          he's been staying with my cousin. But he's still a very cute and
+          happy kitty! There are some pictures of him on the gallery page.
+      </p>
+      <h3>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
