Add content to ballroom section of hobbies page.

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -9,6 +9,102 @@
   <body>
     <div id="content">
       <h1>My Hobbies</h1>
+      <h3>Here is a list of some of my many hobbies (in no particular order):
+      </h3>
+      <ul>
+        <li><a href="#ballroom">Ballroom and latin dancing</a></li>
+        <li><a href="#xstitch">Cross stitching</a></li>
+        <li>Knitting</li>
+        <li>Dungeons and Dragons</li>
+        <li><a href="#reading">Reading</a></li>
+        <li>Cooking/baking</li>
+      </ul>
+      Below I will take a closer look and provide some more context for some of
+          these.
+    <h3 id="ballroom">Ballroom and Latin Dancing</h3>
+    <p>I compete ballroom and latin dancing within the collegiate competitive
+        circuit. I am actually on my college team's board, as the Events
+        Coordinator, which means I am in charge of all space bookings for
+        practices. I have been competing ballroom since I got to college,
+        so for about two years.I just moved up to the silver level this 
+        spring. In order, the collegiate levels are roughly as 
+        follows:
+    </p>
+        <ol>
+            <li>Newcomer</li>
+            <li>Bronze</li>
+            <li>Silver</li>
+            <li>Gold</li>
+            <li>Open</li>
+        </ol>
+    <p>There are 19 competitive ballroom dances, falling into four different
+        categories. I don't compete all of them, but I do compete most of them!
+        Here is a table showing the different dances, with links to some
+        examples.
+    </p>
+    <table>
+      <tr class="intam">
+          <th></th>
+          <th>International</th>
+          <th>American</th>
+      </tr>
+      <tr>
+        <th class="bllrmltn" rowspan="6">Ballroom</th>
+        <th>Standard</th>
+        <th>Smooth</th>
+      </tr>
+      <tr>
+        <td>Waltz</td>
+        <td>Waltz</td>
+      </tr>
+      <tr>
+        <td>Tango</td>
+        <td>Tango</td>
+      </tr>
+      <tr>
+        <td>Foxtrot</td>
+        <td>Foxtrot</td>
+      </tr>
+      <tr>
+        <td>Quickstep</td>
+        <td>Viennese Waltz</td>
+      </tr>
+      <tr>
+        <td>Viennese Waltz
+        <td></td>
+      </tr>
+      <tr>
+        <th class="bllrmltn" rowspan="7">Latin</th>
+        <th>Latin</th>
+        <th>Rhythm</th>
+      </tr>
+      <tr>
+        <td>Cha Cha</td>
+        <td>Cha Cha</td>
+      </tr>
+      <tr>
+        <td>Rumba</td>
+        <td>Rumba</td>
+      </tr>
+      <tr>
+        <td>Samba</td>
+        <td>Mambo</td>
+      </tr>
+      <tr>
+        <td>Jive</td>
+        <td>East Coast Swing</td>
+      </tr>
+      <tr>
+        <td>Paso Doble</td>
+        <td>Bolero</td>
+      </tr>
+    </table>
+    <p>There are also many social dances which are not in the
+        main competitive circuit. My three favorites are West Coast
+        Swing, Bachata, and Salsa. 
+    </p>
+    <h3 id="xstitch">Cross Stitch</h3>
+    <h3 id="reading">Reading</h3>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
