Add links, begin adding content to other sections of hobbies page.

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -18,6 +18,7 @@
         <li>Dungeons and Dragons</li>
         <li><a href="#reading">Reading</a></li>
         <li>Cooking/baking</li>
+        <li>Video games (especially cute ones!)</li>
       </ul>
       Below I will take a closer look and provide some more context for some of
           these.
@@ -40,7 +41,7 @@
     <p>There are 19 competitive ballroom dances, falling into four different
         categories. I don't compete all of them, but I do compete most of them!
         Here is a table showing the different dances, with links to some
-        examples.
+        examples of my favorites.
     </p>
     <table>
       <tr class="intam">
@@ -58,7 +59,7 @@
         <td>Waltz</td>
       </tr>
       <tr>
-        <td>Tango</td>
+        <td><a href="https://youtu.be/jODtGZEKP7U?t=67">Tango</a></td>
         <td>Tango</td>
       </tr>
       <tr>
@@ -66,12 +67,12 @@
         <td>Foxtrot</td>
       </tr>
       <tr>
-        <td>Quickstep</td>
-        <td>Viennese Waltz</td>
+        <td><a href="https://youtu.be/vVciDrbmjxQ?t=11">Quickstep</a></td>
+        <td></td>
       </tr>
       <tr>
         <td>Viennese Waltz
-        <td></td>
+        <td><a href="https://youtu.be/oHgWq5jEN48?t=11">Viennese Waltz</a></td>
       </tr>
       <tr>
         <th class="bllrmltn" rowspan="7">Latin</th>
@@ -87,11 +88,11 @@
         <td>Rumba</td>
       </tr>
       <tr>
-        <td>Samba</td>
+        <td><a href="https://youtu.be/jcq-I4Y3_xk?t=32">Samba</a></td>
         <td>Mambo</td>
       </tr>
       <tr>
-        <td>Jive</td>
+        <td><a href="https://youtu.be/73KjGH7jcMI?t=11">Jive</a></td>
         <td>East Coast Swing</td>
       </tr>
       <tr>
@@ -99,12 +100,34 @@
         <td>Bolero</td>
       </tr>
     </table>
+    <p>My favorite of these dances is Jive!</p>
     <p>There are also many social dances which are not in the
         main competitive circuit. My three favorites are West Coast
         Swing, Bachata, and Salsa. 
     </p>
     <h3 id="xstitch">Cross Stitch</h3>
+    <p>Cross stitch is a type of embroidery consisting of many tiny X's
+        as well as the possible addition of specialty stitches such
+        as backstitch (which creates outlines) and french knots
+        (which create the appearance of florets).
+        There are some pictures of my own cross stitches in the gallery,
+        but here are some images of patterns I am currently working on,
+        which have been completed by other people.
+    <h5>Pretty Little Tokyo</h5>
+    <h5>Japanese Garden</h5>
+    <h5>Gustav Klimpt's Mother and Child</h5>
     <h3 id="reading">Reading</h3>
+    I love to read! Here are some of my favorite books:
+      <ul>
+          <li>Pachinko by Min Jin Lee</li>
+          <li>Ender's Game (series) by Orson Scott Card</li>
+          <li>Slaughterhouse-Five by Kurt Vonnegut</li>
+          <li>Mistborn (series) by Brandon Sanderson</li>
+          <li>Harry Potter (series) by J.K. Rowling</li>
+          <li>The Passion by Jeanette Winterson</li>
+          <li>One Hundred Years of Solitude by Gabriel Garcia
+              Marquez</li>
+      </ul>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
