Change spacing of heading tag to maintain consistency.

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -9,8 +9,7 @@
   <body>
     <div id="content">
       <h1>My Hobbies</h1>
-      <h3>Here is a list of some of my many hobbies (in no particular order):
-      </h3>
+      <h3>Here is a list of some of my many hobbies (in no particular order): </h3>
       <ul>
         <li><a href="#ballroom">Ballroom and latin dancing</a></li>
         <li><a href="#xstitch">Cross stitching</a></li>
