Add content to gallery page.

--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -7,8 +7,24 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Image Gallery</h1>
+    <h1>Image Gallery</h1>
+    <div id="gallery">
+      <img src="/images/headshot.jpg" alt="A professional looking headshot
+          of me."/>
+      <img src="/images/selfie.jpg" alt="A less professional, more silly
+          looking selfie of me."/>
+      <img src="/images/scoutsitting.jpg" alt="A picture of my cat sitting
+          on the ground."/>
+      <img src="/images/gothiccat.jpg" alt="A cross stitch of a cat sitting
+          underneath an archway."/>
+      <img src="/images/mitlatin.jpg" alt="An picture of me doing a turn at
+          a ballroom competition."/>
+      <img src="/images/scoutwindow.jpg" alt="A picture of my cat lying
+           on a windowsill."/>
+      <img src="/images/chinesephoenix.jpg" alt="A partially finished cross
+          stitch of a Chinese phoenix."/>
+      <img src="/images/tuftsstandard.jpeg" alt="A picture of my dance partner
+            dipping me at a competition."/>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
