--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -15,6 +15,7 @@
         <li><a href="#xstitch">Cross stitching</a></li>
         <li>Knitting</li>
         <li>Dungeons and Dragons</li>
+        <li>Jigsaw puzzles</li>
         <li><a href="#reading">Reading</a></li>
         <li>Cooking/baking</li>
         <li>Video games (especially cute ones!)</li>
