Add some additional content to hobbies and about page.

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -19,6 +19,7 @@
         <li><a href="#reading">Reading</a></li>
         <li>Cooking/baking</li>
         <li>Video games (especially cute ones!)</li>
+        <li>Listening to podcasts</li>
       </ul>
       Below I will take a closer look and provide some more context for some of
           these.
@@ -115,8 +116,14 @@
         which have been completed by other people.
     </p>
     <h5>Pretty Little Tokyo</h5>
+    <img src="/images/prettylittletokyo.jpg" alt="A cross stitch of a cute,
+        cartoon-ish rendition of Tokyo." class="patterns"/>
     <h5>Japanese Garden</h5>
+    <img src="/images/japanesegarden.jpg" alt="An elaborate cross stitch of
+        a Japanese-themed garden." class="patterns"/>
     <h5>Gustav Klimpt's Mother and Child</h5>
+    <img src="/images/motherandchild.jpg" alt="A stylish rendition of a mother
+        holding a child in her arms." class="patterns"/>
     <h3 id="reading">Reading</h3>
     I love to read! Here are some of my favorite books:
       <ul>
