--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -13,6 +13,7 @@
       <h4><a href="#childhood">Childhood</a></h4>
       <h4><a href="#cs">Computer Science</a></h4>
       <h4><a href="#school">School</a></h4>
+      <h4><a href="#languages">Languages</a></h4>
       <h4><a href="#pets">Pets</a></h4>
       <h3 id="childhood">Childhood</h3>
       <p>My full name is Gabrielle Newman and I'm 20 years old.
@@ -45,6 +46,21 @@
           area (western Massachusetts). However, it can also be hard to find
           myself so far from home. Still, I've made a lot of great friends
           in my time there and wouldn't trade the experience for anything.
+      </p>
+      <h3 id="languages">Languages</h3>
+      <p>I took Japanese as my foreign language in high school, as well as an
+          intensive course for a semester in college. My Japanese actually
+          isn't half bad! I can write fairly quickly and neatly, though my
+          reading is much better than my listening comprehension. I'd really
+          love to move to Japan for a few months someday to try and improve
+          my fluency. Right now, I'm hardly at the level of an elementary
+          schooler.
+          However, my first language was actually Hebrew! I unfortunately
+          don't speak it very well anymore, but I was totally fluent as a
+          child. I also used to be able to read and write fairly well. Now,
+          my listening comprehension is OK but that's about all. I wish I
+          had time to take a Hebrew language course... I think it would
+          come back to me pretty quickly!
       </p>
       <h3 id="pets">Pets</h3>
       <p>My favorite animals in the entire world are cats! I just think
