Add JS feature where clicking on images in gallery displays a fact.

--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -10,21 +10,23 @@
     <h1>Image Gallery</h1>
     <div id="gallery">
       <img src="/images/headshot.jpg" alt="A professional looking headshot
-          of me."/>
+            of me." id="headshot" onclick="displayCaption(this)"/>
       <img src="/images/selfie.jpg" alt="A less professional, more silly
-          looking selfie of me."/>
+          looking selfie of me." id="selfie" onclick="displayCaption(this)"/>
       <img src="/images/scoutsitting.jpg" alt="A picture of my cat sitting
-          on the ground."/>
+          on the ground." id="scoutsitting" onclick="displayCaption(this)"/>
       <img src="/images/gothiccat.jpg" alt="A cross stitch of a cat sitting
-          underneath an archway."/>
+          underneath an archway." id="gothiccat" onclick="displayCaption(this)"/>
       <img src="/images/mitlatin.jpg" alt="An picture of me doing a turn at
-          a ballroom competition."/>
+          a ballroom competition." id="mitlatin" onclick="displayCaption(this)"/>
       <img src="/images/scoutwindow.jpg" alt="A picture of my cat lying
-           on a windowsill."/>
+           on a windowsill." id="scoutwindow" onclick="displayCaption(this)"/>
       <img src="/images/chinesephoenix.jpg" alt="A partially finished cross
-          stitch of a Chinese phoenix."/>
+          stitch of a Chinese phoenix." id="chinesephoenix" 
+          onclick="displayCaption(this)"/>
       <img src="/images/tuftsstandard.jpeg" alt="A picture of my dance partner
-            dipping me at a competition."/>
+            dipping me at a competition." id="tuftsstandard" 
+            onclick="displayCaption(this)"/>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
@@ -32,5 +34,6 @@
       <a href="/gallery.html">Gallery</a>
       <a href="/hobbies.html">Hobbies</a>
     </div>
+    <div id="caption-container"></div>
   </body>
 </html>
