--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,7 +23,7 @@
       <p>This page is pink because that is Gabi's favorite color.</p>
       <p>Here is a fun selfie she took a while ago!</p>
       <img id="home-selfie" src="/images/selfie.jpg" alt="An image of Gabi posing with
-          her hand on her face." onclick="changeColor()"/>
+          her hand on her face."/>
       <p>Click here to get a random fact about Gabi:</p>
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
