Update image ids to adhere to style guide.

--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -14,18 +14,18 @@
       <img src="/images/selfie.jpg" alt="A less professional, more silly
           looking selfie of me." id="selfie" onclick="displayCaption(this)"/>
       <img src="/images/scoutsitting.jpg" alt="A picture of my cat sitting
-          on the ground." id="scoutsitting" onclick="displayCaption(this)"/>
+          on the ground." id="scout-sitting" onclick="displayCaption(this)"/>
       <img src="/images/gothiccat.jpg" alt="A cross stitch of a cat sitting
-          underneath an archway." id="gothiccat" onclick="displayCaption(this)"/>
+          underneath an archway." id="gothic-cat" onclick="displayCaption(this)"/>
       <img src="/images/mitlatin.jpg" alt="An picture of me doing a turn at
-          a ballroom competition." id="mitlatin" onclick="displayCaption(this)"/>
+          a ballroom competition." id="mit-latin" onclick="displayCaption(this)"/>
       <img src="/images/scoutwindow.jpg" alt="A picture of my cat lying
-           on a windowsill." id="scoutwindow" onclick="displayCaption(this)"/>
+           on a windowsill." id="scout-window" onclick="displayCaption(this)"/>
       <img src="/images/chinesephoenix.jpg" alt="A partially finished cross
-          stitch of a Chinese phoenix." id="chinesephoenix" 
+          stitch of a Chinese phoenix." id="chinese-phoenix" 
           onclick="displayCaption(this)"/>
       <img src="/images/tuftsstandard.jpeg" alt="A picture of my dance partner
-            dipping me at a competition." id="tuftsstandard" 
+            dipping me at a competition." id="tufts-standard" 
             onclick="displayCaption(this)"/>
     </div>
     <div id="sidebar">
