--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,6 +27,9 @@
       <p>Click here to get a random fact about Gabi:</p>
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
+      <p>Click here to get a special message from the Java servlet:</p>
+      <button onclick="getHello()">Click me!</button>
+      <div id="hello-container"></div>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
