Change method names to improve maintainability.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,8 +28,8 @@
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
       <p>Click here to get a special message from the Java servlet:</p>
-      <button onclick="getHello()">Click me!</button>
-      <div id="hello-container"></div>
+      <button onclick="getMessageFromServlet()">Click me!</button>
+      <div id="message-container"></div>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
