--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="getMessageFromServlet()">
     <div id="content">
       <h1>Gabi Newman's Portfolio</h1>
       <p>This is Gabi's portfolio.</p>
@@ -27,9 +27,10 @@
       <p>Click here to get a random fact about Gabi:</p>
       <button onclick="addRandomFact()">Fun Fact!</button>
       <div id="fact-container"></div>
-      <p>Click here to get a special message from the Java servlet:</p>
-      <button onclick="getMessageFromServlet()">Click me!</button>
-      <div id="message-container"></div>
+      <div id="comments">
+        <h3>Comments</h3>
+        <div id="message-container"></div>
+      </div>
     </div>
     <div id="sidebar">
       <a href="/index.html">Home</a>
