Add a crucial omission to books list. Also, fix bad indentation.

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -127,14 +127,16 @@
     <h3 id="reading">Reading</h3>
     I love to read! Here are some of my favorite books:
       <ul>
-          <li>Pachinko by Min Jin Lee</li>
-          <li>Ender's Game (series) by Orson Scott Card</li>
-          <li>Slaughterhouse-Five by Kurt Vonnegut</li>
-          <li>Mistborn (series) by Brandon Sanderson</li>
-          <li>Harry Potter (series) by J.K. Rowling</li>
-          <li>The Passion by Jeanette Winterson</li>
-          <li>One Hundred Years of Solitude by Gabriel Garcia
-              Marquez</li>
+        <li>Gödel, Escher, Bach: an Eternal Golden Braid
+            by Douglas Hofstadter</li>
+        <li>Pachinko by Min Jin Lee</li>
+        <li>Ender's Game (series) by Orson Scott Card</li>
+        <li>Slaughterhouse-Five by Kurt Vonnegut</li>
+        <li>Mistborn (series) by Brandon Sanderson</li>
+        <li>Harry Potter (series) by J.K. Rowling</li>
+        <li>The Passion by Jeanette Winterson</li>
+        <li>One Hundred Years of Solitude by Gabriel Garcia
+            Marquez</li>
       </ul>
     </div>
     <div id="sidebar">
