Modify variable and method names to be more clear.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getMessageFromServlet()">
+  <body onload="getCommentsFromServlet()">
     <div id="content">
       <h1>Gabi Newman's Portfolio</h1>
       <p>This is Gabi's portfolio.</p>
@@ -29,7 +29,7 @@
       <div id="fact-container"></div>
       <div id="comments">
         <h3>Comments</h3>
-        <div id="message-container"></div>
+        <div id="comments-container"></div>
       </div>
     </div>
     <div id="sidebar">
