Add TODO to HTML pages.

--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -70,6 +70,8 @@
           he's been staying with my cousin. But he's still a very cute and
           happy kitty! There are some pictures of him on the gallery page.
       </p>
+      <!-- TODO: Find a way to make comments and navbar common to all pages
+          without actually repeating HTML code, as it is now. -->
       <div id="comments">
         <h3>Comments</h3>
         <form action="/data" method="POST">
