--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -27,6 +27,8 @@
       <img src="/images/tuftsstandard.jpeg" alt="A picture of my dance partner
             dipping me at a competition." id="tufts-standard" 
             onclick="displayCaption(this)"/>
+      <!-- TODO: Find a way to make comments and navbar common to all pages
+          without actually repeating HTML code, as it is now. -->
       <div id="comments">
         <h3>Comments</h3>
         <form action="/data" method="POST">
