--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -138,6 +138,8 @@
         <li>One Hundred Years of Solitude by Gabriel Garcia
             Marquez</li>
       </ul>
+      <!-- TODO: Find a way to make comments and navbar common to all pages
+          without actually repeating HTML code, as it is now. -->
       <div id="comments">
         <h3>Comments</h3>
         <form action="/data" method="POST">
