--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getCommentsFromServlet()">
+  <body>
     <div id="content">
       <h1>My Hobbies</h1>
       <h3>Here is a list of some of my many hobbies (in no particular order): </h3>
