--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getCommentsFromServlet()">
+  <body>
     <h1>Image Gallery</h1>
     <div id="gallery">
       <img src="/images/headshot.jpg" alt="A professional looking headshot
