--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getCommentsFromServlet()">
+  <body>
     <div id="content">
       <h1>Gabi Newman's Portfolio</h1>
       <p>This is Gabi's portfolio.</p>
