--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -6,6 +6,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="config.js"></script>
   </head>
   <body onload="loadMap()">
     <div id="content">
