--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="loadMap()">
+  <body>
     <div id="content">
       <h1>About Me</h1>
       <h2>Here's a more detailed look at what makes me me!</h2>
