--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -46,12 +46,7 @@
         <div id="comments-container"></div>
       </div>
     </div>
-    <div id="sidebar">
-      <a href="/index.html">Home</a>
-      <a href="/about.html">About Me</a>
-      <a href="/gallery.html">Gallery</a>
-      <a href="/hobbies.html">Hobbies</a>
-    </div>
+    <div id="sidebar"></div>
     <div id="caption-container"></div>
   </body>
 </html>
