--- a/portfolio/src/main/webapp/gallery.html
+++ b/portfolio/src/main/webapp/gallery.html
@@ -27,22 +27,8 @@
       <img src="/images/tuftsstandard.jpeg" alt="A picture of my dance partner
             dipping me at a competition." id="tufts-standard" 
             onclick="displayCaption(this)"/>
-      <!-- TODO: Find a way to make comments and navbar common to all pages
-          without actually repeating HTML code, as it is now. -->
       <div id="comments">
-        <h3>Comments</h3>
-        <form action="/data" method="POST">
-          Name:
-          <br>
-          <input type="text" name="name-input" />
-          <br><br>
-          Comment:
-          <br>
-          <textarea name="comment-input"></textarea>
-          <input type="hidden" name="page-name" value="/gallery.html"/>
-          <br><br>
-          <input type="submit"/>
-        </form>
+        <div id="comments-form-container"></div>
         <div id="comments-container"></div>
       </div>
     </div>
