--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -138,22 +138,8 @@
         <li>One Hundred Years of Solitude by Gabriel Garcia
             Marquez</li>
       </ul>
-      <!-- TODO: Find a way to make comments and navbar common to all pages
-          without actually repeating HTML code, as it is now. -->
       <div id="comments">
-        <h3>Comments</h3>
-        <form action="/data" method="POST">
-          Name:
-          <br>
-          <input type="text" name="name-input" />
-          <br><br>
-          Comment:
-          <br>
-          <textarea name="comment-input"></textarea>
-          <input type="hidden" name="page-name" value="/hobbies.html"/>
-          <br><br>
-          <input type="submit"/>
-        </form>
+        <div id='comments-form-container'></div>
         <div id="comments-container"></div>
       </div>
     </div>
